fix(plugins/plugin-core-support): ctrl+F responds in both editor and kui
also fixes a hover effect issue with kui's text search close button -- not visible in dark themes

Fixes #1573

--- a/plugins/plugin-core-support/web/css/text-search.css
+++ b/plugins/plugin-core-support/web/css/text-search.css
@@ -69,7 +69,7 @@ body.subwindow #search-bar.visible {
     font-size: 1.5em;
 }
 #search-close-button:hover {
-    color: var(--color-ui-02);
+    color: var(--color-base0D);
     cursor: pointer;
 }
 #search-found-text.no-search-yet {
